--- a/two.grrrau.co/public/assets/style.css
+++ b/two.grrrau.co/public/assets/style.css
@@ -67,11 +67,13 @@
 .wrong{
 	animation: wrong-flash 2s ease-in-out;
 }
+/* .loading{
+	animation: loading 1s ease-in-out;
+} */
 
 @keyframes right-flash {
 	0%, 10%, 25%, 40%, 50%, 60%, 75%, 90%, 100%{
     transform: translateY(0);
-    background-color: #8539a8;
   }
   18%,22%,68%,72%{
     background-color: #0ac91a;
@@ -88,12 +90,10 @@
     background-color: #0ac91a;
   }
 }
-
 
   @keyframes wrong-flash {
 	0%, 10%, 25%, 40%, 50%, 60%, 75%, 90%, 100%{
     transform: translateY(0);
-    background-color: #8539a8;
   }
   18%,22%,68%,72%{
     background-color: #e51010;
@@ -110,6 +110,19 @@
     background-color: #e51010;
   }
 }
+
+@keyframes loading {
+	0%, 20%, 50%, 80%, 100%{
+		transform: translateY(0);
+	}
+  40% {
+    transform: translateY(-14px);
+  }
+  60%{
+    transform: translateY(-7px);
+  }
+}
+
 /*
 
   30% {
@@ -200,4 +213,9 @@ input[type=text]:focus {
 	color: #f0f0f0;
 	text-align: center;
 	display: none;
+}
+
+#hidden{
+	display: none;
+	animation: loading 1s ease-in-out infinite;	
 }
