--- a/two.grrrau.co/public/assets/style.css
+++ b/two.grrrau.co/public/assets/style.css
@@ -220,4 +220,20 @@ input[type=text]:focus {
 	animation: loading 1s ease-in-out infinite;	
 }
 
+input[type="range"] {
+  -webkit-appearance: none !important;
+  width: 100%;
+  height: 1px;
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 10px;
+  margin: auto;
+  transition: all 400ms;
+  outline:none;
+  margin: 0;
+}
 
+#word{
+	color: #f0f0f0;
+	margin-top:20px;
+}
