--- a/two.grrrau.co/public/assets/style.css
+++ b/two.grrrau.co/public/assets/style.css
@@ -60,68 +60,107 @@
 	/*animation: bounce 1s;*/
 }
 
-
-.right{
+.right {
 	animation: right-flash 2s ease-in-out;
 }
-.wrong{
+
+.wrong {
 	animation: wrong-flash 2s ease-in-out;
 }
+
+
 /* .loading{
 	animation: loading 1s ease-in-out;
 } */
 
 @keyframes right-flash {
-	0%, 10%, 25%, 40%, 50%, 60%, 75%, 90%, 100%{
-    transform: translateY(0);
-  }
-  18%,22%,68%,72%{
-    background-color: #0ac91a;
-  }
-  20%,70% {
-    transform: translateY(-30px);
-    background-color: #0ac91a;
-  }
- 28%,32%,78%,82%{
-    background-color: #0ac91a;
-  }
-  30%,80% {
-    transform: translateY(-15px);
-    background-color: #0ac91a;
-  }
+	0%,
+	10%,
+	25%,
+	40%,
+	50%,
+	60%,
+	75%,
+	90%,
+	100% {
+		transform: translateY(0);
+	}
+	18%,
+	22%,
+	68%,
+	72% {
+		background-color: #0ac91a;
+	}
+	20%,
+	70% {
+		transform: translateY(-30px);
+		background-color: #0ac91a;
+	}
+	28%,
+	32%,
+	78%,
+	82% {
+		background-color: #0ac91a;
+	}
+	30%,
+	80% {
+		transform: translateY(-15px);
+		background-color: #0ac91a;
+	}
 }
 
-  @keyframes wrong-flash {
-	0%, 10%, 25%, 40%, 50%, 60%, 75%, 90%, 100%{
-    transform: translateY(0);
-  }
-  18%,22%,68%,72%{
-    background-color: #e51010;
-  }
-  20%,70% {
-    transform: translateY(-30px);
-    background-color: #e51010;
-  }
- 28%,32%,78%,82%{
-    background-color: #e51010;
-  }
-  30%,80% {
-    transform: translateY(-15px);
-    background-color: #e51010;
-  }
+@keyframes wrong-flash {
+	0%,
+	10%,
+	25%,
+	40%,
+	50%,
+	60%,
+	75%,
+	90%,
+	100% {
+		transform: translateY(0);
+	}
+	18%,
+	22%,
+	68%,
+	72% {
+		background-color: #e51010;
+	}
+	20%,
+	70% {
+		transform: translateY(-30px);
+		background-color: #e51010;
+	}
+	28%,
+	32%,
+	78%,
+	82% {
+		background-color: #e51010;
+	}
+	30%,
+	80% {
+		transform: translateY(-15px);
+		background-color: #e51010;
+	}
 }
 
 @keyframes loading {
-	0%, 20%, 50%, 80%, 100%{
+	0%,
+	20%,
+	50%,
+	80%,
+	100% {
 		transform: translateY(0);
 	}
-  40% {
-    transform: translateY(-14px);
-  }
-  60%{
-    transform: translateY(-7px);
-  }
+	40% {
+		transform: translateY(-14px);
+	}
+	60% {
+		transform: translateY(-7px);
+	}
 }
+
 
 /*
 
@@ -197,8 +236,8 @@ input[type=text]:focus {
 
 .givenGuess {
 	position: absolute;
-				top: 90%;
-	left:calc( 50% + 30px);	
+	top: 90%;
+	left: calc( 50% + 30px);
 	/* left: calc( 50% - 160px); */
 	margin: 10px;
 	border-radius: 25px;
@@ -215,25 +254,28 @@ input[type=text]:focus {
 	display: none;
 }
 
-#hidden{
+#hidden {
 	display: none;
-	animation: loading 1s ease-in-out infinite;	
+	animation: loading 1s ease-in-out infinite;
 }
 
 input[type="range"] {
-  -webkit-appearance: none !important;
-  width: 100%;
-  height: 1px;
-  background-color: #f0f0f0;
-  border: none;
-  border-radius: 10px;
-  margin: auto;
-  transition: all 400ms;
-  outline:none;
-  margin: 0;
+	-webkit-appearance: none !important;
+	width: 100%;
+	height: 1px;
+	background-color: #f0f0f0;
+	border: none;
+	border-radius: 10px;
+	margin: auto;
+	transition: all 400ms;
+	outline: none;
+	margin: 0;
 }
 
-#word{
+#word {
 	color: #f0f0f0;
-	margin-top:20px;
+	margin-top: 20px;
+	display: inline;
+	margin-right: 16%;
+	text-align: right;
 }
