--- a/two.grrrau.co/public/assets/style.css
+++ b/two.grrrau.co/public/assets/style.css
@@ -259,17 +259,30 @@ input[type=text]:focus {
 	animation: loading 1s ease-in-out infinite;
 }
 
-input[type="range"] {
+#wordSlider {
 	-webkit-appearance: none !important;
 	width: 100%;
-	height: 1px;
+	height: 30px;
 	background-color: #f0f0f0;
 	border: none;
 	border-radius: 10px;
 	margin: auto;
+	margin-top: 20px;
 	transition: all 400ms;
 	outline: none;
-	margin: 0;
+	cursor: pointer;
+}
+
+#wordSlider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%; 
+    background: #8539a8;
+	cursor: pointer;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+	
 }
 
 #word {
