--- a/two.grrrau.co/public/assets/style.css
+++ b/two.grrrau.co/public/assets/style.css
@@ -329,6 +329,12 @@ input[type=text]:focus {
 	width: 100%;
 	/* font-size: 80px; */
 }
+#current {
+	color: #f0f0f0;
+	text-align: center;
+	width: 100%;
+	/* font-size: 80px; */
+}
 
 .received {
 	margin: 10px;
